--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "chalk": "^2.4.1",
     "postcss": "^7.0.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^23.3.9",
+    "jest": "^23.6.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "node --inspect --inspect-brk ./src/index.js"
+    "test": "jest .",
+    "debug": "node --inspect --inspect-brk ./src/validater.js"
   },
   "repository": {
     "type": "git",
